# Cheat-sheets

./: .gitignore  CMakeLists.txt  main.cpp  windows cmds.txt
!JasmineJS/: SpecRunner.html  Ссылки для изучения.txt
!JasmineJS/src/: Playlist.js  Song.js  testItself.js
!JavaScript/: Javascript.js
!PHP/PHP Matt Zandstra/: использование parent, расширение методов и конструктора .php  конец работы функции при неправильных данных.php  проверка объекта на инстанс.php  создание объекта.php
!SQL/: stopMySQLServer.txt
!TypeScript/: Examples.ts  classes.ts  functions.ts  interfaces.ts  script.ts
.scss-bootstrap default configuration/: _props.scss  styles.scss
JavaScript/: Javascript.js
PHP/PHP Functions/: allPHPFunctions.php  date and time.php  php-strings.php  php-variables.php  phpOtherFunctions.php
SQL/: cheatsheet.sql
modules/: C++20_Constraints.cpp  Examples.cpp  _header_source.cpp  _header_source.h  algorithms.cpp  class_template_argument_deduction.cpp  data_structures.cpp  examples2.cpp  fstream.cpp  initializer_list_construction.cpp  mem_fn.cpp  memory_handles.cpp  parameter_pack.cpp  predicates.cpp  ref_cref.cpp  templates.cpp  time.cpp  valarray.cpp
modules/basics/: Constructor_polymorphism.cpp  _class example.cpp  _essential operations in class example.cpp  enum.cpp  error_handling.cpp  friend_function.cpp  namespaces.cpp  template_class.cpp  virtuality and abstraction.cpp
test/: algorithm.cpp  global_unique_copy.cpp
